# semantic-pattern

./: .gitignore  LICENSE  LICENSE-docs  README.md  SPEC-ISSUES.md  pyproject.toml
.github/workflows/: ci.yml
battery/: chart.py  cross.py  degrade.py  printpack.py  run.py
battery/ingest/: __init__.py  __main__.py
experiments/exp-001-synthetic-battery/: manifest.yaml  raw_results.csv  report.md
experiments/exp-002-cross-grammar/: manifest.yaml  raw_results.csv  report.md
experiments/exp-003-screen-pilot/: raw_results.csv  report.md  summary.md
experiments/exp-003-screen-rerun/: raw_results.csv  report.md  summary.md
generator/: __init__.py  cascade.py  fragments.py  grid.py
grammars/: bar-cascade-001.yaml  iso-002.yaml
photos/: manifest.template.yaml  manifest.yaml
print-pack/: INSTRUCTIONS.md
recogniser/: __init__.py  __main__.py  claim.py  locate.py  measure.py  measure_grid.py  score.py
schemas/grammar-sheet/v0/: grammar-sheet.schema.json
sheets/: __init__.py  core.py
spec/: pattern-grammar-audit-001.md  pattern-grammar-audit-002-iso.md  semantic-pattern-spec-v0.1-skeleton.md
tests/: test_battery.py  test_cross.py  test_generator.py  test_generator_grid.py  test_ingest.py  test_locate.py  test_primitive_mix.py  test_recogniser.py  test_recogniser_grid.py  test_sheets.py
