[project]
name = "semantic-pattern"
version = "0.1.0"
description = "Recogniser, generator and test battery for the Semantic Pattern system: brand identities as measurable generative pattern grammars"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bodkin", email = "james@bodkin.studio" }]
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator", "recogniser", "battery", "sheets"]

[tool.pytest.ini_options]
testpaths = ["tests"]
